--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>Video Game Store</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="full-height"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
